k8s/appointment-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  labels:
    app: appointment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
      - name: appointment-service
        image: 825765405000.dkr.ecr.us-east-1.amazonaws.com/appointment-service:latest
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10
      nodeSelector:
        kubernetes.io/os: linux
